--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -31,6 +32,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.jakewharton:butterknife:8.4.0'
+
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.intuit.sdp:sdp-android:1.0.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
